--- a/Blog.html
+++ b/Blog.html
@@ -104,12 +104,12 @@
       </section>
       <section class="card swiper-slide">
         <figure class="card-image card3"></figure>
-        <a href="">
+        <a href="BlogPostThree.html">
 
         <section class="card-text card3">
-          <span class="date">Undefined</span>
-          <h2>Post Three</h2>
-          <p>Yet to be posted but watch out for the space.</p>
+          <span class="date">4 October 2022</span>
+          <h2>Interactive Data Visualisation</h2>
+          <p>In this article, I will draw on the reading, but especially on the video conference hosted by Dimara and Perin, which focuses on what data visualization is all about... </p>
         </section>
         <section class="card-stats card3">
           <section class="stat">
@@ -126,7 +126,10 @@
           </div> -->
         </a>
 
+        
+
         </section>
+        
         </section>
       </section>
     </section>
@@ -141,7 +144,7 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-<script src="/js/swiper.js"></script>
+<script src="js/swiper.js"></script>
 
 <!-- <script>
 var swiper = new Swiper(".slide-content", {
