--- a/BlogPostTwo.html
+++ b/BlogPostTwo.html
@@ -3,7 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Design</title>
+<meta name="description" content="This is the second entry blog of Diane's website .">
+<meta name="keywords" content="UI, UX">
+<title>Blog Post 2</title>
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/responsive.css">
@@ -13,7 +15,7 @@
 <body>
 
 <header class="header">
-	<div class="container-fluid">
+	<section class="container-fluid">
 		<section class="row d-flex align-items-center">
 			<section class="col-auto">
 				<a href="index.html" class="logo"><h1>BADABLING</h1></a>
@@ -31,7 +33,7 @@
 					<i class="fa fa-bars"></i></a> -->
 			</nav>
 
-			</div>
+		</section>
 		</section>
 	</div>
 </header>	
@@ -48,7 +50,7 @@
 </article>
 
 
-<div class="block-row styleguide" id="section2"  data-parallax="scroll" data-image-src="images/BlogBG.jpg">
+<section class="block-row styleguide" id="section2"  data-parallax="scroll" data-image-src="images/BlogBG.jpg">
 	<section class="blog_container">
 		<h1 class = "blog-feed h-feed">BLOG</h1>
 
@@ -95,7 +97,7 @@
 
 
 	</section>
-</div>
+</section>
 			 
 <footer class="footer">
 	&copy; BADABLING.com
