--- a/BlogTemplate.html
+++ b/BlogTemplate.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="This is the page where all blog entries for this website are avaiable">
+	<meta name="keywords" content="UI, UX, data visualisation, interactive data visualistion, blog entries">
+
+
     <title>Blog</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -13,7 +17,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Oleo+Script+Swash+Caps&family=Playfair+Display&family=Roboto:ital,wght@1,300&display=swap" rel="style.css">
 </head>
 <header class="header">
-	<div class="container-fluid">
+	<section class="container-fluid">
 		<section class="row d-flex align-items-center">
 			<section class="col-auto">
 				<a href="index.html" class="logo"><h1>BADABLING</h1></a>
@@ -31,7 +35,7 @@
 					<i class="fa fa-bars"></i></a> -->
 			</nav>
 
-			</div>
+		</section>
 		</section>
 	</div>
 </header>	
