--- a/SERVICECHECK.html
+++ b/SERVICECHECK.html
@@ -171,7 +171,7 @@ link rel="preconnect" href="https://fonts.googleapis.com">
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="images/card8.jpg" class="product-thumb" alt="">
+                    <img src="images/card8.jpg" class="product-thumb" alt="an image of jewlery the service provides">
                     <button class="card-btn">add to wishlist</button>
                 </div>
                 <div class="product-info">
@@ -183,7 +183,7 @@ link rel="preconnect" href="https://fonts.googleapis.com">
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="images/card9.jpg" class="product-thumb" alt="">
+                    <img src="images/card9.jpg" class="product-thumb" alt="an image of jewlery the service provides">
                     <button class="card-btn">add to wishlist</button>
                 </div>
                 <div class="product-info">
@@ -195,7 +195,7 @@ link rel="preconnect" href="https://fonts.googleapis.com">
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="images/card10.jpg" class="product-thumb" alt="">
+                    <img src="images/card10.jpg" class="product-thumb" alt="an image of jewlery the service provides">
                     <button class="card-btn">add to wishlist</button>
                 </div>
                 <div class="product-info">
