--- a/blogPostOne.html
+++ b/blogPostOne.html
@@ -4,6 +4,10 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Design</title>
+<meta name="description" content="This is the first blog entry of Diane Bada's website.">
+<meta name="keywords" content="data visualisation, data, information, inequalities, scientific visualisation, information visualisation">
+
+
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/responsive.css">
