--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name = "description" content = "This is the homepage of Diane Bada's website based on jewellry">
+<meta name = "keywords" contnet=" Jewlery API, Jewlery Services, Jewlery Data Visualisation ">
 <title>Home</title>
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.css"> -->
@@ -14,10 +16,10 @@
 <script src="https://kit.fontawesome.com/e2a7956efc.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
 
-<body>
+<body h-entry>
 
 <header class="header">
-	<div class="container-fluid">
+	<section class="container-fluid">
 		<section class="row d-flex align-items-center">
 			<section class="col-auto">
 				<a href="index.html" class="logo"><h1>BADABLING</h1></a>
@@ -35,10 +37,13 @@
 					<i class="fa fa-bars"></i></a> -->
 			</nav>
 
-			</div>
+        </section>
 		</section>
 	</div>
 </header>	
+
+<main>
+
 
 <article class="main_menu" id="main_menu">
 	<span class="menu_bg"></span>
@@ -53,7 +58,7 @@
 	</ul>
 </article>
 
-<div class="block-row banner" id="section1" data-parallax="scroll" data-image-src ="images/blackBG.jpg" >
+<section class="block-row banner" id="section1" data-parallax="scroll" data-image-src ="images/blackBG.jpg" >
 	<section slot="container" class = u-video>
 		<video src= "Jewelry.mp4" autoplay = "autoplay" muted = "true" loop = "true"></video>
 
@@ -61,8 +66,8 @@
 		<p>When it doubt, bling it out!</p>
 
 	</section>
-</div>
-<div class="block-row about" id="section2"  data-parallax="scroll" data-image-src="images/AboutBG.jpg">
+</section>
+<section class="block-row about" id="section2"  data-parallax="scroll" data-image-src="images/AboutBG.jpg">
 	<section class="container">
 		<section class="row">
 			<section class="col-md-7">
@@ -77,126 +82,126 @@
 			</section>
 		</section>
 	</section>
-</div>
-<div class="block-row services" id="section3"  data-parallax="scroll" data-image-src="images/serviceBG.jpg">
+</section>
+<section class="block-row services" id="section3"  data-parallax="scroll" data-image-src="images/serviceBG.jpg">
 	<section class="service-container swiper">
 		<h2 class = "service-title">Services</h2>
         <button class="pre-btn"><img src="images/arrow.png" alt=""></button>
         <button class="nxt-btn"><img src="images/arrow.png" alt=""></button>
-        <div class="product-container">
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="/images/13BJewlery.jpg" class="product-thumb" alt="">
+        <section class="product-container">
+            <section class="product-card">
+                <article class="product-image">
+                    <img src="images/13BJewlery.jpg" class="product-thumb" alt="an image of jewlery the service provides">
                     <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
+                </article>
+                <article class="product-info">
                     <h2 class="product-brand">Bracelets</h2>
                     <p class="product-short-description">Diamonds..</p>
                     <span class="price">$20 000</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="images/2BJewelry.jpg" class="product-thumb" alt="">
+                </article>
+            </section>
+            <section class="product-card">
+                <article class="product-image">
+                    <img src="images/2BJewelry.jpg" class="product-thumb" alt="an image of jewlery the service provides">
                     <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
+                </article>
+                <article class="product-info">
                     <h2 class="product-brand">Necklace</h2>
                     <p class="product-short-description">Diamonds..</p>
                     <span class="price">$26 500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="images/3BJewelry.jpg" class="product-thumb" alt="">
+                </article>
+            </section>
+            <section class="product-card">
+                <article class="product-image">
+                    <img src="images/3BJewelry.jpg" class="product-thumb" alt="an image of jewlery the service provides">
                     <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
+                </article>
+                <article class="product-info">
                     <h2 class="product-brand">Ring</h2>
                     <p class="product-short-description">Diamonds and Gems..</p>
                     <span class="price">$19 800</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="images/11BJewlery.jpg" class="product-thumb" alt="">
+                </article>
+            </section>
+            <section class="product-card">
+                <article class="product-image">
+                    <img src="images/11BJewlery.jpg" class="product-thumb" alt="an image of jewlery the service provides">
                     <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
+                </article>
+                <article class="product-info">
                     <h2 class="product-brand">Ring</h2>
                     <p class="product-short-description">Diamonds..</p>
                     <span class="price">$45 000</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="images/5BJewelry.jpg" class="product-thumb" alt="">
+                </article>
+            </section>
+            <section class="product-card">
+                <article class="product-image">
+                    <img src="images/5BJewelry.jpg" class="product-thumb" alt="an image of jewlery the service provides">
                     <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
+                </article>
+                <article class="product-info">
                     <h2 class="product-brand">Ring</h2>
                     <p class="product-short-description">Diamonds..</p>
                     <span class="price">$14 350</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="images/7ea5ea2c331e4bc76e3e96701bbb5a9a6BJewelry.jpg" class="product-thumb" alt="">
+                </article>
+            </section>
+            <section class="product-card">
+                <article class="product-image">
+                    <img src="images/7ea5ea2c331e4bc76e3e96701bbb5a9a6BJewelry.jpg" class="product-thumb" alt="an image of jewlery the service provides">
                     <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
+                </article>
+                <article class="product-info">
                     <h2 class="product-brand">Bracelet</h2>
                     <p class="product-short-description">Diamonds and Gold..</p>
                     <span class="price">$28 200</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="images/7BJewelry.jpg" class="product-thumb" alt="">
+                </article>
+            </section>
+            <section class="product-card">
+                <article class="product-image">
+                    <img src="images/7BJewelry.jpg" class="product-thumb" alt="an image of jewlery the service provides">
                     <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
+                </article>
+                <article class="product-info">
                     <h2 class="product-brand">Bracelet</h2>
                     <p class="product-short-description">Diamonds..</p>
                     <span class="price">$30 500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="images/8BJewlery.jpg" class="product-thumb" alt="">
+                </article>
+            </section>
+            <section class="product-card">
+                <article class="product-image">
+                    <img src="images/8BJewlery.jpg" class="product-thumb" alt="an image of jewlery the service provides">
                     <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
+                </article>
+                <article class="product-info">
                     <h2 class="product-brand">Necklace</h2>
                     <p class="product-short-description">Diamonds..</p>
                     <span class="price">$55 300</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="images/9BJewlery.jpg.crdownload" class="product-thumb" alt="">
+                </article>
+            </section>
+            <section class="product-card">
+                <article class="product-image">
+                    <img src="images/9BJewlery.jpg.crdownload" class="product-thumb" alt="an image of jewlery the service provides">
                     <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
+                </article>
+                <article class="product-info">
                     <h2 class="product-brand">Rings</h2>
                     <p class="product-short-description">Diamonds, Gems and Gold..</p>
                     <span class="price">$58 000</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="images/10B Jewlery.jpg" class="product-thumb" alt="">
+                </article>
+            </section>
+            <section class="product-card">
+                <article class="product-image">
+                    <img src="images/10B Jewlery.jpg" class="product-thumb" alt="an image of jewlery the service provides">
                     <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
+                </article>
+                <article class="product-info">
                     <h2 class="product-brand">Bracelet</h2>
                     <p class="product-short-description">Diamonds and Gold..</p>
                     <span class="price">$18 000</span>
-                </div>
-            </div>
-        </div>
+                </article>
+            </section>
+        </section>
     </section>
-</div>
+</section>
 <div class="block-row contact" id="section4"  data-parallax="scroll" data-image-src="images/ContactBG.jpg">
 	<section class="container text-center">
 		<h2 class = "contact_heading">Contact Us</h2>
@@ -229,7 +234,7 @@
 		</article>
 	</section>
 </div>			
-<footer class="footer">
+<footer class="footer h-card">
 	&copy; BADABLING.com
 </footer>
 <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
@@ -240,4 +245,6 @@
 
 
 </body>
+</main>
+
 </html>
