removal of JS nav bc it doesnt work

--- a/BlogPostThree.html
+++ b/BlogPostThree.html
@@ -54,7 +54,7 @@
 	<section class="blog_container">
 		<h1 class = "blog-feed h-feed">BLOG</h1>
 
-		<h2>Interactive Data Visualisation</h2>
+		<h2>Interactive Data</h2>
 
 		<section class = "blog_post">
 
