--- a/interactivedata.html
+++ b/interactivedata.html
@@ -77,7 +77,7 @@
 
       <script type="text/javascript" src="js/basic.js"></script>
       <script type = "module" src="DataVInteractive.js"></script>
-      <script type = "module" src="DataV.js"></script>
+      <script type = "module" src="js/DataV.js"></script>
       <script src="https://code.jquery.com/jquery-1.7.2.min.js"></script>
       <script src="https://d3js.org/d3.v3.min.js"></script>
      
