--- a/interactivedata.html
+++ b/interactivedata.html
@@ -62,9 +62,9 @@
     <body>
         <main>
             <div id="query-container" class="bg-primary shadow-lg">
-                <a href="#games" id="games" class="text-white">
+                <a href="DataVisualization.html" id="games" class="text-white">
                   Video Game Data Set</a>
-                <a href="#movies" id="movies" class="text-white">
+                <a href="DataVisualization.html" id="movies" class="text-white">
                   Movies Data Set</a>
                   <a href="interactivedata.html" id="" class="text-white">
                     Jewlery Data Set</a>
