--- a/interactivedata.html
+++ b/interactivedata.html
@@ -30,10 +30,10 @@
                 <section class="col-auto">
                     <a href="index.html" class="logo"><h1>BADABLING</h1></a>
                 </section>
-                <nav class="text_right">
+                <nav class="text-right">
                     <input type = "checkbox" id = "check">
             <label for="check" class = "burger-button" id = "burger_button"><i class="fa-solid fa-bars"></i></label>
-                        <ul class = "nav_sections"> 
+                        <ul class = "nav-sections"> 
                             <li><a href="Blog.html">Blog</a></li>
                             <li><a href="Design.html">Design</a></li>
                             <li><a href="DataVisualization.html">Data-Visualisation</a></li>
@@ -47,7 +47,7 @@
             </section>
     </header>	
 
-    <article class="main_menu" id="main_menu">
+    <article class="main-menu" id="main-menu">
         <span class="menu_bg"></span>
         <ul>
             <li><a href="index.html">Home</a></li>
