--- a/Blog.html
+++ b/Blog.html
@@ -21,13 +21,13 @@
 			<section class="col-auto">
 				<a href="index.html" class="logo"><h1>BADABLING</h1></a>
 			</section>
-			<nav class="text_right">
+			<nav class="text-right">
 				<input type = "checkbox" id = "check">
         <label for="check" class = "burger-button" id = "burger_button"><i class="fa-solid fa-bars"></i></label>
-					<ul class = "nav_sections"> 
+					<ul class = "nav-sections"> 
 						<li><a href="Blog.html">Blog</a></li>
 						<li><a href="Design.html">Design</a></li>
-						<li><a href="#">Data-Visualisation</a></li>
+						<li><a href="DataVisualization.html">Data-Visualisation</a></li>
 						<li><a href="#">Data-Art</a></li>
 					</ul>
 				<!-- <a class="nav_icon" id="nav_icon" href="#!">
@@ -39,12 +39,7 @@
 	</div>
 </header>	
 
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-  </head>
+
   <body>
     <section class = "slide-container swiper">
     <section class = "slide-content swiper">
