--- a/BlogPostThree.html
+++ b/BlogPostThree.html
@@ -20,10 +20,10 @@
 			<section class="col-auto">
 				<a href="index.html" class="logo"><h1>BADABLING</h1></a>
 			</section>
-			<nav class="text_right">
+			<nav class="text-right">
 				<input type = "checkbox" id = "check">
         <label for="check" class = "burger-button" id = "burger_button"><i class="fa-solid fa-bars"></i></label>
-					<ul class = "nav_sections"> 
+					<ul class = "nav-sections"> 
 						<li><a href="Blog.html">Blog</a></li>
 						<li><a href="Design.html">Design</a></li>
 						<li><a href="DataVisualization.html">Data-Visualisation</a></li>
