--- a/BlogPostTwo.html
+++ b/BlogPostTwo.html
@@ -20,10 +20,10 @@
 			<section class="col-auto">
 				<a href="index.html" class="logo"><h1>BADABLING</h1></a>
 			</section>
-			<nav class="text_right">
+			<nav class="text-right">
 				<input type = "checkbox" id = "check">
         <label for="check" class = "burger-button" id = "burger_button"><i class="fa-solid fa-bars"></i></label>
-					<ul class = "nav_sections"> 
+					<ul class = "nav-sections"> 
 						<li><a href="Blog.html">Blog</a></li>
 						<li><a href="Design.html">Design</a></li>
 						<li><a href="DataVisualization.html">Data-Visualisation</a></li>
@@ -38,7 +38,7 @@
 	</div>
 </header>	
 
-<article class="main_menu" id="main_menu">
+<article class="main-menu" id="main-menu">
 	<span class="menu_bg"></span>
 	<ul>
 		<li><a href="index.html">Home</a></li>
@@ -51,40 +51,40 @@
 
 
 <section class="block-row styleguide" id="section2"  data-parallax="scroll" data-image-src="images/BlogBG.jpg">
-	<section class="blog_container">
+	<section class="blog-container">
 		<h1 class = "blog-feed h-feed">BLOG</h1>
 
 		<h2>UI/UX - Prototype 1</h2>
 
-		<section class = "blog_post">
+		<section class = "blog-post">
 
-			<p class = "blog1_text">
+			<p class = "blog1-text" h-entry>
 				In this brief essay I will be focusing on the UI and UX of my first prototype. Although, there is still plenty of work and hour to be contributed into completing the finishing product, I will, however, work with what I currently have and talk about the UI and UX that is recognizable so far.
 			</p>
 
 		
 
-			<p class = "blog1_text">
+			<p class = "blog1-text">
 				When it comes to the difference its important to associate each discipline as unique organizational roles. UX is more data-driven projection of how customers are expected to feel when visiting one’s website (Guest, 2021). UI on the other hand, incorporates design patterns and the smallest details into consideration. Overall, UI concerns itself with the layout of the design, as well as making it enjoyable to use, whereas UX concerns itself with the concerns of ease of usage, responsiveness, and seamlessness (Guest, 2021).
 			</p>
 
-			<p class = "blog1_text">
+			<p class = "blog1-text">
 				In terms of the UI of my current prototype, the nav bar is the most solid aspect of UI design that helps the user communicate with the design of the website. The mouse that turns into a little hand pointer informs the users that those links are clickable and as a result, users are meant to and are able to interact with them to send them onto a different page. The same thing can be said for the contact page, where there is a form with appropriate headings to tell you what type of information is needed to be filled in. With that said, the submit button, works as a Call to Action (CTA) as it encourages the user to click the button and submit their form (Guest, 2021). 
 			</p>
 
-			<p class = "blog1_text">
+			<p class = "blog1-text">
 				One of the designs that I am currently working on, but most likely will not finish in time for submission, is being able to have users scroll across different images by holding their mouse down. This is something I really want to iterate throughout my webpage and will use as a form of familiarity with the workings of the webpage. Right now, I just have images put in a grid format, an example of this would be my service page, with the different jewelleries displayed. Users, in the end, should be able to scroll across the different types of jewellery by just dragging across each image until they get onto the next. 
 			</p>
 
-			<p class = "blog1_text">
+			<p class = "blog1-text">
 				In terms of the UX, at the moment, I don’t think I’ll have users feeling what I intend for them to feel, which is ease and responsiveness. However, I do think that I came right with the feeling of introducing them to a world of expensive taste and lavish, which is what my website screams when you look at it and go through it. This came about by the use of the distinctive colours black, gold and white. As well as different images of jewellery and the video that welcomes users at the beginning of the site. What I would like to work on next, is the navigation of the site and how users should feel at ease while navigating and becoming accustomed to the site. I intend to mostly make navigating around the site through mostly scrolling. Other than the few clicks that will be present here and there, scrolling will be the key to familiarity that allows users ease to know how the site works and how to move around it. However, in the meantime I think I’m on the right track and I’m closer to my goals of the website with each decision I make. In terms of responsiveness, I’ve also started to work on media queries to allow the entire website on most devices and in any format, such as the size of page. It is currently not up to par, but it is also a work in progress.
 			</p>
 
-			<p class = "blog1_text">
+			<p class = "blog1-text">
 				I will continue to work on the UI and UX of the website to make it more pleasing to the eye and more functional in terms of the promises the website it meant to deliver such as responsiveness, seamlessness and usability.
 			</p>
 
-		<p class = source_links>
+		<p class = source-links>
 			
 				<li>Guest (2021). “UX vs UI: How They Work Together in Web Design”. Forge and Smith, 8 Jan. Available at: https://forgeandsmith.com/blog/ux-vs-ui-how-they-work-together-in-web-design/ (Accessed: 14 August 2022)</li>
 				
