--- a/DataVisualization.html
+++ b/DataVisualization.html
@@ -25,10 +25,10 @@
                 <section class="col-auto">
                 	<a href="index.html" class="logo"><h1>BADABLING</h1></a>
 				</section>
-				<nav class="text_right">
+				<nav class="text-right">
 					<input type = "checkbox" id = "check">
 			<label for="check" class = "burger-button" id = "burger_button"><i class="fa-solid fa-bars"></i></label>
-						<ul class = "nav_sections"> 
+						<ul class = "nav-sections"> 
 							<li><a href="Blog.html">Blog</a></li>
 							<li><a href="Design.html">Design</a></li>
 							<li><a href="DataVisualization.html">Data-Visualisation</a></li>
@@ -43,8 +43,8 @@
 		</section>
 	</header>	
 <main>
-<section class="main_menu" id="main_menu">
-	<span class="menu_bg"></span>
+<section class="main-menu" id="main_menu">
+	<span class="menu-bg"></span>
 	<ul>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="Blog.html">Blog</a></li>
