--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script src="https://kit.fontawesome.com/e2a7956efc.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
 
-<body h-entry>
+<body>
 
 <header class="header">
 	<section class="container-fluid">
@@ -24,10 +24,10 @@
 			<section class="col-auto">
 				<a href="index.html" class="logo"><h1>BADABLING</h1></a>
 			</section>
-			<nav class="text_right">
+			<nav class="text-right">
 				<input type = "checkbox" id = "check">
         <label for="check" class = "burger-button" id = "burger_button"><i class="fa-solid fa-bars"></i></label>
-					<ul class = "nav_sections"> 
+					<ul class = "nav-sections"> 
 						<li><a href="Blog.html">Blog</a></li>
 						<li><a href="Design.html">Design</a></li>
 						<li><a href="DataVisualization.html">Data-Visualisation</a></li>
@@ -39,14 +39,14 @@
 
         </section>
 		</section>
-	</div>
+	
 </header>	
 
 <main>
 
 
-<article class="main_menu" id="main_menu">
-	<span class="menu_bg"></span>
+<article class="main-menu" id="main-menu">
+	<span class="menu-bg"></span>
 	<ul>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="Blog.html">Blog</a></li>
@@ -61,17 +61,22 @@
 <section class="block-row banner" id="section1" data-parallax="scroll" data-image-src ="images/blackBG.jpg" >
 	<section slot="container" class = u-video>
 		<video src= "Jewelry.mp4" autoplay = "autoplay" muted = "true" loop = "true"></video>
-
+        <section class="container">
+            <section class="row">
+                <section class="col-md-7">
 		<h1 class = "p-business-name">BadaBling</h1>
 		<p>When it doubt, bling it out!</p>
 
+                </section>
+            </section>
+        </section>
 	</section>
 </section>
 <section class="block-row about" id="section2"  data-parallax="scroll" data-image-src="images/AboutBG.jpg">
 	<section class="container">
 		<section class="row">
 			<section class="col-md-7">
-				<article class="about_box">
+				<article class="about-box">
 					<h2>About Us</h2>
 					<p class = "about-content e-content"> You’ll discover individuals from BadaBling in excess of 8,000 adornments stores the nation over.
 						BadaBling speaks to organizations from all zones of the jewellery store network. Our individuals incorporate autonomous adornments stores, gems retail chains, jewellery producers and providers, jewellery fashioners and brands, and specialist co-ops to the jewellery business.
@@ -86,6 +91,7 @@
 <section class="block-row services" id="section3"  data-parallax="scroll" data-image-src="images/serviceBG.jpg">
 	<section class="service-container swiper">
 		<h2 class = "service-title">Services</h2>
+        <p class = "service-instruction">Scroll across products to view catalogue</p>
         <button class="pre-btn"><img src="images/arrow.png" alt=""></button>
         <button class="nxt-btn"><img src="images/arrow.png" alt=""></button>
         <section class="product-container">
@@ -204,8 +210,8 @@
 </section>
 <div class="block-row contact" id="section4"  data-parallax="scroll" data-image-src="images/ContactBG.jpg">
 	<section class="container text-center">
-		<h2 class = "contact_heading">Contact Us</h2>
-		<article class="container_box">
+		<h2 class = "contact-heading">Contact Us</h2>
+		<article class="container-box">
 			<form>
 				<section class="row">
 					<section slot="col-md-6" class = "p-name">
