more changes made from feedback

--- a/BlogPostThree.html
+++ b/BlogPostThree.html
@@ -38,8 +38,8 @@
 	</div>
 </header>	
 
-<article class="main_menu" id="main_menu">
-	<span class="menu_bg"></span>
+<article class="main-menu" id="main-menu">
+	<span class="menu-bg"></span>
 	<ul>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="Blog.html">Blog</a></li>
