--- a/DataVisualization.html
+++ b/DataVisualization.html
@@ -15,10 +15,10 @@
 
 
     <meta content="utf-8" http-equiv="encoding">
+    <body>
 
 
 
-<body>
     <header class="header">
         <section class="container-fluid">
             <section class="row d-flex align-items-center">
@@ -42,7 +42,7 @@
 			</section>
 		</section>
 	</header>	
-<main>
+
 <section class="main-menu" id="main_menu">
 	<span class="menu-bg"></span>
 	<ul>
@@ -82,6 +82,13 @@
       <script type = "module" src="js/DataV.js"></script>
 
     </section>
-</body>
+
 </main>
+<footer class="footer h-card" id = "footer-data">
+
+  <p class = "u-email " >&copy; BADABLING.com</p>
+
+</footer>
+
+</body>
 </html>
