--- a/blogPostOne.html
+++ b/blogPostOne.html
@@ -24,7 +24,7 @@
 			</section>
 			<nav class="text-right">
 				<input type = "checkbox" id = "check">
-        <label for="check" class = "burger-button" id = "burger_button"><i class="fa-solid fa-bars"></i></label>
+        <label for="check" class = "burger-button" id = "burger-button"><i class="fa-solid fa-bars"></i></label>
 					<ul class = "nav-sections"> 
 						<li><a href="Blog.html">Blog</a></li>
 						<li><a href="Design.html">Design</a></li>
@@ -40,8 +40,8 @@
 	</div>
 </header>	
 
-<article class="main_menu" id="main_menu">
-	<span class="menu_bg"></span>
+<article class="main_menu" id="main-menu">
+	<span class="menu-bg"></span>
 	<ul>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="Blog.html">Blog</a></li>
@@ -51,7 +51,9 @@
 	</ul>
 </article>
 
-<div class="block-row homepage_wireframe" id="section6" data-parallax="scroll" data-image-src ="images/BlogBG.jpg" >
+<main>
+
+<section class="block-row homepage_wireframe" id="section6" data-parallax="scroll" data-image-src ="images/BlogBG.jpg" >
 	<article class="blog_container">
 
 		<h1 class = "blog-feed h-feed">BLOG</h1>
@@ -106,11 +108,14 @@
 		</section>
 
 	</article>
-</div>
+</section>
 
+</main>
 			 
-<footer class="footer">
-	&copy; BADABLING.com
+<footer class="footer h-card">
+
+    <p class = "u-email">&copy; BADABLING.com</p>
+
 </footer>
 <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
