--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 	</ul>
 </article>
 
+<main>
 <section class="block-row banner" id="section1" data-parallax="scroll" data-image-src ="images/blackBG.jpg" >
 	<section slot="container" class = u-video>
 		<video src= "Jewelry.mp4" autoplay = "autoplay" muted = "true" loop = "true"></video>
@@ -208,7 +209,7 @@
         </section>
     </section>
 </section>
-<div class="block-row contact" id="section4"  data-parallax="scroll" data-image-src="images/ContactBG.jpg">
+<section class="block-row contact" id="section4"  data-parallax="scroll" data-image-src="images/ContactBG.jpg">
 	<section class="container text-center">
 		<h2 class = "contact-heading">Contact Us</h2>
 		<article class="container-box">
@@ -239,9 +240,12 @@
 			</form>
 		</article>
 	</section>
-</div>			
+</section>	
+</main>		
 <footer class="footer h-card">
-	&copy; BADABLING.com
+
+    <p class = "u-email">&copy; BADABLING.com</p>
+
 </footer>
 <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
@@ -251,6 +255,6 @@
 
 
 </body>
-</main>
+
 
 </html>
