--- a/DataVisualization.html
+++ b/DataVisualization.html
@@ -43,7 +43,7 @@
 		</section>
 	</header>	
 
-<section class="main-menu" id="main_menu">
+<section class="main-menu" id="main-menu">
 	<span class="menu-bg"></span>
 	<ul>
 		<li><a href="index.html">Home</a></li>
