--- a/Design.html
+++ b/Design.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Design</title>
-<meta name = "keywords" content = "Design, Styleguide, Wireframes, Design choices" />
+<meta name = "keywords" content = "Design Styleguide, Wireframes, Design choices" />
 <meta name = "description" content = "Design and Styleguide" />
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -23,7 +23,7 @@
 				</section>
 				<nav class="text-right">
 					<input type = "checkbox" id = "check">
-			<label for="check" class = "burger-button" id = "burger_button"><i class="fa-solid fa-bars"></i></label>
+			<label for="check" class = "burger-button" id = "burger-button"><i class="fa-solid fa-bars"></i></label>
 						<ul class = "nav-sections"> 
 							<li><a href="Blog.html">Blog</a></li>
 							<li><a href="Design.html">Design</a></li>
@@ -39,7 +39,7 @@
 		</section>
 	</header>	
 <main>
-<section class="main-menu" id="main_menu">
+<section class="main-menu" id="main-menu">
 	<span class="menu-bg"></span>
 	<ul>
 		<li><a href="index.html">Home</a></li>
