meta words and descriptions

--- a/blogPostOne.html
+++ b/blogPostOne.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Design</title>
 <meta name="description" content="This is the first blog entry of Diane Bada's website.">
-<meta name="keywords" content="data visualisation, data, information, inequalities, scientific visualisation, information visualisation">
+<meta name="keywords" content="data visualisation, scientific visualisation, information visualisation">
 
 
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
