--- a/interactivedata.html
+++ b/interactivedata.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <meta name="description" content="This is the data visualisation section of Diane Bada's website">
 
-    <meta name = keywords content = "Games API and Movies API, data Visualisations">
+    <meta name = keywords content = "Games API, Movies API, Jewelry API">
     <link rel="stylesheet" href="css/interactive.css">
     <link rel="stylesheet" href="css/Data.css">
 
