--- a/Blog.html
+++ b/Blog.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name = "description" content = "This is the main Blogpage of Diane Bada's website based on jewellry">
+<meta name = "keywords" contnet=" Data Visualisation, Interactivity, UI UX ">
 <title>Design</title>
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 <link rel="stylesheet" type="text/css" href="css/blog.css">
@@ -207,6 +209,8 @@
 
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 <script src="js/swiper.js"></script>
+<script src="js/basic.js"></script>
+
 
 <!-- <script>
 var swiper = new Swiper(".slide-content", {
