--- a/BlogPostThree.html
+++ b/BlogPostThree.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="This is the third entry blog of Diane's website .">
-<meta name="keywords" content="Interactive Data Visualisation">
+<meta name="keywords" content="Interactive,  Data Visualisation, Science">
 <title>Blog Post 2</title>
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
