--- a/DataVisualization.html
+++ b/DataVisualization.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name = "description" content = "This is the page that shows Data Visuaisation made by the developer of the website">
+<meta name = "keywords" contnet=" Data Visualisation, Films, Games, jewelry ">
+    <title>Data Visualisation</title>
     <link rel="stylesheet" href="css/Data.css">
     <script src="/js/jquery-3.1.1.min.js"></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
