--- a/Design.html
+++ b/Design.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Design</title>
 <meta name = "keywords" content = "Design Styleguide, Wireframes, Design choices" />
-<meta name = "description" content = "Design and Styleguide" />
+<meta name = "description" content = "Design and Styleguide of the entire website" />
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/responsive.css">
