--- a/Blog.html
+++ b/Blog.html
@@ -56,6 +56,8 @@
 
 
   <main>
+
+    <h1 class = "blog-title"> Blog Entries</h1>
     <section class = "slide-container swiper">
     <section class = "slide-content swiper">
     <section class = "card-wrapper swiper-wrapper">
