--- a/DataViz/DataVisualization.html
+++ b/DataViz/DataVisualization.html
@@ -7,11 +7,11 @@
     <meta name = "description" content = "This is the page that shows Data Visuaisation made by the developer of the website">
 <meta name = "keywords" contnet=" Data Visualisation, Films, Games, jewelry ">
     <title>Data Visualisation</title>
-    <link rel="stylesheet" href="css/Data.css">
+    <link rel="stylesheet" href="/css/Data.css">
     <script src="/js/jquery-3.1.1.min.js"></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="stylesheet" type="text/css" href="css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+<link rel="stylesheet" type="text/css" href="/css/responsive.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <script src="https://kit.fontawesome.com/e2a7956efc.js" crossorigin="anonymous"></script>
 
@@ -80,8 +80,8 @@
       </div>
       
 
-      <script type="text/javascript" src="js/basic.js"></script>
-      <script type = "module" src="js/DataV.js"></script>
+      <script type="text/javascript" src="/js/basic.js"></script>
+      <script type = "module" src="DataVisualisation.js"></script>
 
     </section>
 
