--- a/DataViz/interactivedata.html
+++ b/DataViz/interactivedata.html
@@ -7,14 +7,14 @@
     <title>Document</title>
     <meta name="description" content="This is the data visualisation section of Diane Bada's website">
 
-    <meta name = keywords content = "Games API, Movies API, Jewelry API">
-    <link rel="stylesheet" href="css/interactive.css">
-    <link rel="stylesheet" href="css/Data.css">
+    <meta name = keywords content = "Games API, Movies API, data Visualisations">
+    <link rel="stylesheet" href="/css/interactive.css">
+    <link rel="stylesheet" href="/css/Data.css">
 
     <script src="/js/jquery-3.1.1.min.js"></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="stylesheet" type="text/css" href="css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+<link rel="stylesheet" type="text/css" href="/css/responsive.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <script src="https://kit.fontawesome.com/e2a7956efc.js" crossorigin="anonymous"></script>
 
@@ -34,7 +34,7 @@
                 </section>
                 <nav class="text-right">
                     <input type = "checkbox" id = "check">
-            <label for="check" class = "burger-button" id = "burger_button"><i class="fa-solid fa-bars"></i></label>
+            <label for="check" class = "burger-button" id = "burger-button"><i class="fa-solid fa-bars"></i></label>
                         <ul class = "nav-sections"> 
                             <li><a href="Blog.html">Blog</a></li>
                             <li><a href="Design.html">Design</a></li>
@@ -50,7 +50,7 @@
     </header>	
 
     <article class="main-menu" id="main-menu">
-        <span class="menu_bg"></span>
+        <span class="menu-bg"></span>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="Blog.html">Blog</a></li>
@@ -91,9 +91,9 @@
   
   </footer>
 </body>
-<script type="text/javascript" src="js/basic.js"></script>
+<script type="text/javascript" src="/js/basic.js"></script>
 <script type = "module" src="DataVInteractive.js"></script>
-<script type = "module" src="js/DataV.js"></script>
+<script type = "module" src="DataVisualisation.js"></script>
 <script src="https://code.jquery.com/jquery-1.7.2.min.js"></script>
 <script src="https://d3js.org/d3.v3.min.js"></script>
 </html>
