--- a/BlogPostTwo.html
+++ b/BlogPostTwo.html
@@ -26,8 +26,8 @@
 					<ul class = "nav-sections"> 
 						<li><a href="Blog.html">Blog</a></li>
 						<li><a href="Design.html">Design</a></li>
-						<li><a href="DataVisualization.html">Data-Visualisation</a></li>
-						<li><a href="#">Data-Art</a></li>
+						<li><a href="/DataViz/DataVisualization.html">Data-Visualisation</a></li>
+						<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
 					</ul>
 				<!-- <a class="nav_icon" id="nav_icon" href="#!">
 					<i class="fa fa-bars"></i></a> -->
