--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 			</section>
 			<nav class="text-right">
 				<input type = "checkbox" id = "check">
-        <label for="check" class = "burger-button" id = "burger_button"><i class="fa-solid fa-bars"></i></label>
+        <label for="check" class = "burger-button" id = "burger-button"><i class="fa-solid fa-bars"></i></label>
 					<ul class = "nav-sections"> 
 						<li><a href="Blog.html">Blog</a></li>
 						<li><a href="Design.html">Design</a></li>
-						<li><a href="DataVisualization.html">Data-Visualisation</a></li>
-						<li><a href="#">Data-Art</a></li>
+						<li><a href="/DataViz/DataVisualisation.js">Data-Visualisation</a></li>
+						<li><a href="DataArt/dataArt.html">Data-Art</a></li>
 					</ul>
 				<!-- <a class="nav_icon" id="nav_icon" href="#!">
 					<i class="fa fa-bars"></i></a> -->
