--- a/Blog.html
+++ b/Blog.html
@@ -18,7 +18,7 @@
 <body>
 
 <header class="header">
-	<div class="container-fluid">
+	<section class="container-fluid">
 		<section class="row d-flex align-items-center">
 			<section class="col-auto">
 				<a href="index.html" class="logo"><h1>BADABLING</h1></a>
@@ -29,17 +29,20 @@
 					<ul class = "nav-sections"> 
 						<li><a href="Blog.html">Blog</a></li>
 						<li><a href="Design.html">Design</a></li>
-						<li><a href="/DataViz/DataVisualization.html">Data-Visualisation</a></li>
+						<li><a href="/DataViz/DataVisualisation.js">Data-Visualisation</a></li>
 						<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
 					</ul>
 				<!-- <a class="nav_icon" id="nav_icon" href="#!">
 					<i class="fa fa-bars"></i></a> -->
 			</nav>
 
-			</div>
+        </section>
 		</section>
-	</div>
+	
 </header>	
+
+<main>
+
 
 <article class="main-menu" id="main-menu">
 	<span class="menu-bg"></span>
@@ -47,13 +50,12 @@
 		<li><a href="index.html">Home</a></li>
 		<li><a href="Blog.html">Blog</a></li>
 		<li><a href="Design.html">Design</a></li>
-		<li><a href="DataVisualization.html">Data-Visualization</a></li>
-		<li><a href="#">Data-Art</a></li>
+		<li><a href="/DataViz/DataVisualization.html">Data-Visualization</a></li>
+		<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
 
 
 	</ul>
 </article>
-
 
   <main>
 
