--- a/BlogPostTwo.html
+++ b/BlogPostTwo.html
@@ -22,7 +22,7 @@
 			</section>
 			<nav class="text-right">
 				<input type = "checkbox" id = "check">
-        <label for="check" class = "burger-button" id = "burger_button"><i class="fa-solid fa-bars"></i></label>
+        <label for="check" class = "burger-button" id = "burger-button"><i class="fa-solid fa-bars"></i></label>
 					<ul class = "nav-sections"> 
 						<li><a href="Blog.html">Blog</a></li>
 						<li><a href="Design.html">Design</a></li>
@@ -49,6 +49,7 @@
 	</ul>
 </article>
 
+<main>
 
 <section class="block-row styleguide" id="section2"  data-parallax="scroll" data-image-src="images/BlogBG.jpg">
 	<section class="blog-container">
@@ -98,7 +99,7 @@
 
 	</section>
 </section>
-			 
+</main>	 
 <footer class="footer">
 	&copy; BADABLING.com
 </footer>
