--- a/DataArt/dataArt.html
+++ b/DataArt/dataArt.html
@@ -27,14 +27,14 @@
         <section class="container-fluid">
             <section class="row d-flex align-items-center">
                 <section class="col-auto">
-                	<a href="index.html" class="logo"><h1>BADABLING</h1></a>
+                	<a href="/index.html" class="logo"><h1>BADABLING</h1></a>
 				</section>
 				<nav class="text-right">
 					<input type = "checkbox" id = "check">
 			<label for="check" class = "burger-button" id = "burger_button"><i class="fa-solid fa-bars"></i></label>
 						<ul class = "nav-sections"> 
-							<li><a href="Blog.html">Blog</a></li>
-							<li><a href="Design.html">Design</a></li>
+							<li><a href="/Blog.html">Blog</a></li>
+							<li><a href="/Design.html">Design</a></li>
 							<li><a href="/DataViz/DataVisualization.html">Data-Visualisation</a></li>
 							<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
 						</ul>
@@ -50,9 +50,9 @@
 <section class="main-menu" id="main-menu">
 	<span class="menu-bg"></span>
 	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="Blog.html">Blog</a></li>
-		<li><a href="Design.html">Design</a></li>
+		<li><a href="/index.html">Home</a></li>
+		<li><a href="/Blog.html">Blog</a></li>
+		<li><a href="/Design.html">Design</a></li>
 		<li><a href="/DataViz/DataVisualization.html">Data-Visualization</a></li>
 		<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
 	</ul>
@@ -69,10 +69,14 @@
     </main>
    
       
-</body>
-</html>
 <script type="module" src="moduleScript.js">
+    
 </script>
+<script src="js/basic.js"></script>
+
 
 </main>
 
+</body>
+
+</html>
