--- a/Design.html
+++ b/Design.html
@@ -27,7 +27,7 @@
 						<ul class = "nav-sections"> 
 							<li><a href="Blog.html">Blog</a></li>
 							<li><a href="Design.html">Design</a></li>
-							<li><a href="/DataViz/DataVisualization.html">Data-Visualisation</a></li>
+							<li><a href="/DataViz/DataVisualisation.js">Data-Visualisation</a></li>
 							<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
 						</ul>
 					<!-- <a class="nav_icon" id="nav_icon" href="#!">
@@ -36,20 +36,9 @@
 	
 			</section>
 			</section>
-		</section>
+		
 	</header>	
 <main>
-<section class="main-menu" id="main-menu">
-	<span class="menu-bg"></span>
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="Blog.html">Blog</a></li>
-		<li><a href="Design.html">Design</a></li>
-		<li><a href="DataVisualization.html">Data-Visualization</a></li>
-		<li><a href="#">Data-Art</a></li>
-	</ul>
-</section>
-
 <section class="block-row homepage_wireframe" id="section6" data-parallax="scroll" data-image-src ="images/DesignBG.jpg" >
 	<section class="hp_wireframe_container swiper">
 
