--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<li><a href="Blog.html">Blog</a></li>
 						<li><a href="Design.html">Design</a></li>
 						<li><a href="/DataViz/DataVisualisation.js">Data-Visualisation</a></li>
-						<li><a href="DataArt/dataArt.html">Data-Art</a></li>
+						<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
 					</ul>
 				<!-- <a class="nav_icon" id="nav_icon" href="#!">
 					<i class="fa fa-bars"></i></a> -->
@@ -51,8 +51,8 @@
 		<li><a href="index.html">Home</a></li>
 		<li><a href="Blog.html">Blog</a></li>
 		<li><a href="Design.html">Design</a></li>
-		<li><a href="DataVisualization.html">Data-Visualization</a></li>
-		<li><a href="#">Data-Art</a></li>
+		<li><a href="/DataViz/DataVisualization.html">Data-Visualization</a></li>
+		<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
 
 
 	</ul>
