--- a/BlogPostThree.html
+++ b/BlogPostThree.html
@@ -14,41 +14,45 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Oleo+Script+Swash+Caps&family=Playfair+Display&family=Roboto:ital,wght@1,300&display=swap" rel="style.css"></head>
 <body>
 
-<header class="header">
-	<section class="container-fluid">
-		<section class="row d-flex align-items-center">
-			<section class="col-auto">
-				<a href="index.html" class="logo"><h1>BADABLING</h1></a>
+	<header class="header">
+		<section class="container-fluid">
+			<section class="row d-flex align-items-center">
+				<section class="col-auto">
+					<a href="index.html" class="logo"><h1>BADABLING</h1></a>
+				</section>
+				<nav class="text-right">
+					<input type = "checkbox" id = "check">
+			<label for="check" class = "burger-button" id = "burger-button"><i class="fa-solid fa-bars"></i></label>
+						<ul class = "nav-sections"> 
+							<li><a href="Blog.html">Blog</a></li>
+							<li><a href="Design.html">Design</a></li>
+							<li><a href="/DataViz/DataVisualisation.js">Data-Visualisation</a></li>
+							<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
+						</ul>
+					<!-- <a class="nav_icon" id="nav_icon" href="#!">
+						<i class="fa fa-bars"></i></a> -->
+				</nav>
+	
 			</section>
-			<nav class="text-right">
-				<input type = "checkbox" id = "check">
-        <label for="check" class = "burger-button" id = "burger_button"><i class="fa-solid fa-bars"></i></label>
-					<ul class = "nav-sections"> 
-						<li><a href="Blog.html">Blog</a></li>
-						<li><a href="Design.html">Design</a></li>
-						<li><a href="/DataViz/DataVisualization.html">Data-Visualisation</a></li>
-						<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
-					</ul>
-				<!-- <a class="nav_icon" id="nav_icon" href="#!">
-					<i class="fa fa-bars"></i></a> -->
-			</nav>
-
-		</section>
-		</section>
-	</div>
-</header>	
-
-<article class="main-menu" id="main-menu">
-	<span class="menu-bg"></span>
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="Blog.html">Blog</a></li>
-		<li><a href="Design.html">Design</a></li>
-		<li><a href="DataVisualization.html">Data-Visualization</a></li>
-		<li><a href="#">Data-Art</a></li>
-	</ul>
-</article>
-
+			</section>
+		
+	</header>	
+	
+	
+	
+	<article class="main-menu" id="main-menu">
+		<span class="menu-bg"></span>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="Blog.html">Blog</a></li>
+			<li><a href="Design.html">Design</a></li>
+			<li><a href="/DataViz/DataVisualization.html">Data-Visualization</a></li>
+			<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
+	
+	
+		</ul>
+	</article>
+<main>
 
 <section class="block-row styleguide" id="section2"  data-parallax="scroll" data-image-src="images/BlogBG.jpg">
 	<section class="blog_container">
@@ -107,7 +111,7 @@ Going back to the definition provided by Prima, “data-related-intent” was a 
 
 	</section>
 </section>
-			 
+</main>	 
 <footer class="footer">
 	&copy; BADABLING.com
 </footer>
