--- a/DataArt.html
+++ b/DataArt.html
@@ -29,7 +29,7 @@
 				</section>
 				<nav class="text-right">
 					<input type = "checkbox" id = "check">
-			<label for="check" class = "burger-button" id = "burger_button"><i class="fa-solid fa-bars"></i></label>
+			<label for="check" class = "burger-button" id = "burger-button"><i class="fa-solid fa-bars"></i></label>
 						<ul class = "nav-sections"> 
 							<li><a href="Blog.html">Blog</a></li>
 							<li><a href="Design.html">Design</a></li>
