--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 <header class="header">
-	<section class="container-fluid">
+	<!-- <section class="container-fluid">
 		<section class="row d-flex align-items-center">
 			<section class="col-auto">
 				<a href="index.html" class="logo"><h1>BADABLING</h1></a>
@@ -33,12 +33,14 @@
 						<li><a href="/DataViz/DataVisualisation.js">Data-Visualisation</a></li>
 						<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
 					</ul>
-				<!-- <a class="nav_icon" id="nav_icon" href="#!">
-					<i class="fa fa-bars"></i></a> -->
+			
 			</nav>
 
         </section>
-		</section>
+		</section> -->
+
+        <section id="main-bar"></section>
+
 	
 </header>	
 
@@ -252,6 +254,8 @@
 <script type="text/javascript" src="js/basic.js"></script>
 <script src="js/draggablePic.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+<script src="/js/nav..js" id="nav-bar"></script>
+
 
 
 </body>
